Fourth slice at updating keywords
Includes minor fix to naming
Relates to #4

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MIDI Device Controller
-version=1.0
+version=1.0.1
 author=MrSolidSnake745
 maintainer=Anand Jain <mrsolidsnake745@gmail.com>
 sentence=Musical control of devices via the MIDI interface
-paragraph=
+paragraph=TODO
 category=Device Control
 url=https://github.com/solidsnake745/MIDI_Device_Controller
 architectures=*
